Upgrade to Java 11 [HZ-3617] (#289)