@@ -15,7 +15,6 @@
  */
 package com.hazelcast.jdbc;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -89,10 +88,6 @@ final class JdbcUrl {
     }
 
     private static String decodeUrl(String raw) {
-        try {
-            return URLDecoder.decode(raw, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException impossible) {
-            throw new RuntimeException(impossible);
-        }
+        return URLDecoder.decode(raw, StandardCharsets.UTF_8);
     }
 }
